# project-history-workbench

./: .editorconfig  .gitignore  .kilocodemodes  AGENTS.md  LICENSE-CODE  PLAN.md  README.md  Taskfile.yml  package.xml  pyproject.toml  run_with_freecad.sh
.opencode/: package-lock.json
.opencode/agents/: fc_plan.md  implementer.md  orchestrator.md  reviewer.md  test-runner.md
.opencode/skills/freecad-source/: SKILL.md
.opencode/tasks/: 11-lazy-initialization-plan.md  12-node-selection-properties-plan.md  2-api-exploration.md  3-column-property-diff.md  3-core-domain-implementation.md  4-domain-fixes-plan.md  4-refactor-presentation-models.md  5-snapshot-management-plan.md  6-phase3-diff-engine-plan.md  7-architecture-refactoring.md  7-comparator-refactor-plan.md  8-application-layer-plan.md  8-fix-diff-tree-bugs-plan.md  9-context-centralization-plan.md  9-populate-snapshots-plan.md  document-diff-result-architecture.md  enable-stage-button-for-git-changes.md  fix-property-viewer-bug.md  fix-staging-viewer-bugs-plan.md  freecad-preferences-settings-page-plan.md  multiparent-normalized-snapshot-schema-plan.md  path-based-diff-ui-adaptation-plan.md  phase-1-plan.md  phase-2-plan.md  phase-4-domain-prep.md  phase-5-attempt-2.md  phase-7-staging-diff-plan.md  phase-8-commit-plan.md  phase-9-diffs-for-commits.md  refactor-diff-architecture.md  refactor-ui-architecture.md  simplify-comparator-algorithm.md  simplify-models-and-comparator.md  stage-all-button-plan.md  type-specific-property-exclusions-plan.md
docs/: Architecture.md  DevSetup.md  Development.md  MVP-Implementation.md  PLAN.md  ProjectState.md  UI.md  ui-mock.xcf
docs/api-exploration/: freecad-preferences-page-api.md
docs/manual-testing/: git_repository_tests.md
freecad/: __init__.py
freecad/diff_wb/: __init__.py  _container.py  config.py  freecad_version_check.py  init_gui.py  qt.py  resources.py  utils.py  version.py
freecad/diff_wb/application/: __init__.py
freecad/diff_wb/application/actions/: __init__.py  create_diff.py  create_document_diffs.py  create_document_snapshot_commit.py  create_document_snapshot_working.py  get_commits.py  get_diff_settings.py  get_open_eligible_documents.py  open_all_documents_in_repository.py  result_models.py  save_diff_settings.py  stage_documents.py
freecad/diff_wb/application/di/: __init__.py  container.py
freecad/diff_wb/diff/: __init__.py  diff_result.py  property_diff.py  tree_diff.py
freecad/diff_wb/domain/: __init__.py  config.py  diff_result.py  freecad_ports.py  ports.py
freecad/diff_wb/domain/diff/: __init__.py  comparator.py  engine.py  models.py
freecad/diff_wb/domain/git/: __init__.py  git_service.py  models.py  paths.py  ports.py
freecad/diff_wb/domain/settings/: __init__.py  models.py  persistence_state.py  repository.py  text_codec.py
freecad/diff_wb/domain/snapshots/: __init__.py  extractor.py  gui_extractor.py  models.py  repository.py  serializer.py
freecad/diff_wb/domain/tree/: data_path.py  property.py
freecad/diff_wb/entrypoints/: __init__.py  commands.py  workbench.py
freecad/diff_wb/infrastructure/freecad/: __init__.py  app_port.py  context.py  logger.py  ports.py  settings_repo.py
freecad/diff_wb/infrastructure/git/: git_port_adapter.py
freecad/diff_wb/infrastructure/gui/: qt_adapter.py
freecad/diff_wb/infrastructure/persistence/: snapshot_yaml.py  snapshot_yaml_deserializer.py
freecad/diff_wb/ports/: __init__.py  app_port.py  freecad_context.py  freecad_port.py  gui_port.py  settings_port.py
freecad/diff_wb/resources/icons/: .gitkeep
freecad/diff_wb/resources/translations/: ProjectHistory.ts  README.md
freecad/diff_wb/resources/ui/: .gitkeep
freecad/diff_wb/ui/: __init__.py  composer.py  registry.py  state.py  translation_strings.py
freecad/diff_wb/ui/presenters/: __init__.py  diff_presenter.py  git_repository_presenter.py  presentation_models.py  snapshot_presenter.py
freecad/diff_wb/ui/protocols/: __init__.py  diff_view.py  snapshot_view.py
freecad/diff_wb/ui/views/: __init__.py  diff_panel_view.py  diff_theme.py  document_diff_tree_widget.py  history_panel_widget.py  models.py  property_diff_tree_widget.py  settings_preferences_page.py
freecad/history_wb/application/actions/: __init__.py  open_visual_diff.py  unstage_documents.py
freecad/history_wb/application/di/: container.py
freecad/history_wb/domain/git/: git_service.py  ports.py
freecad/history_wb/entrypoints/: commands.py  workbench.py
freecad/history_wb/infrastructure/freecad/: freecad_file_manager.py  freecad_visual_diff_creator.py
freecad/history_wb/infrastructure/git/: git_port_adapter.py
freecad/history_wb/resources/translations/: History.ts
freecad/history_wb/ui/: composer.py
freecad/history_wb/ui/presenters/: diff_presenter.py  git_repository_presenter.py
freecad/history_wb/ui/protocols/: diff_view.py
scripts/: check_docstrs.py  dev-metrics.py  explore_expressions.py  verify_snapshot_extraction.py
tasks/: 1-implement-check-task.md  6-phase3-diff-engine-plan.md
tests/: conftest.py
tests/fakes/: __init__.py  fake_diff_view.py  fake_freecad_port.py  fake_git_port.py  fake_gui_port.py  fake_logger.py  fake_repositories.py  fake_snapshot_view.py  null_snapshot_view.py
tests/freecad/: BasicFile.FCStd
tests/freecad/.snapshots/: BasicFile.yaml
tests/integration/: conftest.py  test_for_debugger.py  test_format_float.py  test_property_path_extraction_freecad.py  test_property_viewer.py  test_property_viewer_phase6.py  test_snapshot_extractor_flat_structure.py
tests/integration/commands/: __init__.py
tests/integration/snapshots/: test_debug_explorer.py
tests/integration/workbench/: test_activation_flow.py  test_diff_panel.py  test_loading_and_activation.py
tests/unit/: __init__.py  test_domain.py  test_property_diff.py  test_tree_diff.py  test_utils.py
tests/unit/domain/: test_freecad_port.py
tests/unit/entrypoints/: __init__.py  test_commands.py  test_commit_command.py  test_open_all_documents_command.py  test_workbench_preferences_page.py
tests/unit/ui/: test_composer.py  test_ui_registry.py
(+95 files in other folders)
