[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "freecad.history_wb"
version = "0.1.0"
description = "Track CAD model history and review changes using 3D and tree comparisons"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Ephi Blanshey", email = "hello@blanshey.com" }
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "freecad-stubs>=1.0.21",
    "mypy>=1.17.1",
    "pyside6==6.8.3",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "radon>=6.0.1",
    "ruff>=0.12.11",
    "taskfile-help>=0.4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["freecad"]

[tool.hatch.build.targets.wheel.force-include]
"freecad/history_wb/resources" = "freecad/history_wb/resources"

[project.urls]
Homepage = "https://github.com/eblanshey/history-workbench"
Repository = "https://github.com/eblanshey/history-workbench"
Issues = "https://github.com/eblanshey/history-workbench/issues"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
exclude = [
    '^freecad/history_wb/init_gui\\.py$',
    '^freecad/history_wb/entrypoints/.*\\.py$',
    '^scripts/.*\\.py$',
]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "FreeCAD",
    "FreeCADGui",
    "PySide6",
    "PySide6.*",
    "PyQt5",
    "PyQt5.*",
    "PyQt5.QtCore",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "freecad.history_wb.init_gui",
    "freecad.history_wb.entrypoints.*",
]
ignore_errors = true

# UI layer: Enable type checking but disable Qt-specific errors
# Qt stubs have incomplete/incorrect signatures, so we skip those checks
[[tool.mypy.overrides]]
module = ["freecad.history_wb.ui.*"]
disable_error_code = ["override", "attr-defined", "no-untyped-def"]

[[tool.mypy.overrides]]
module = [
    "freecad.history_wb.ports.*",
    "freecad.history_wb.freecad_version_check",
]
disable_error_code = ["attr-defined", "no-any-return"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["scripts"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint]
# Selected lint codes:
#   E - pycodestyle errors
#   W - pycodestyle warnings
#   F - Pyflakes
#   I - isort
#   B - flake8-bugbear
#   C4 - flake8-comprehensions
#   UP - pyupgrade
#   N - pep8-naming
#   SIM - flake8-simplify
#   C901 - mccabe (complexity)
#   BLE - flake8-blind-except
# Ignored codes:
#   S101 - assert statements (disallowed by pylint)
#   N802 - function name case (disabled for flexibility)
#   N806 - variable name case in function (disabled for flexibility)
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM", "C901", "BLE"]
ignore = ["S101", "N802", "N806"]
# Configure ruff to recognize our custom Log instance as a logger object.
# This allows BLE001 to recognize Log.exception() calls as proper exception logging.
logger-objects = ["freecad.history_wb.utils.Log"]
# Per-file ignores:
#   tests/* - allow asserts, higher complexity, and longer lines in tests
#   freecad/history_wb/snapshot/snapshot_query.py - allow higher complexity for _build_tree_node
per-file-ignores = { "tests/*" = ["S101", "C901", "E501"], "freecad/history_wb/snapshot/snapshot_query.py" = ["C901"] }

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["history_wb", "tests"]
lines-after-imports = 2
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests requiring FreeCAD runtime",
    "gui: marks tests that require FreeCADGui (requires FREECAD_ROOT)",
]

[tool.coverage.run]
source = ["freecad/"]
omit = ["tests/*"]
